--- a/notebooks/000_osm_proto.ipynb
+++ b/notebooks/000_osm_proto.ipynb
@@ -2495,9 +2495,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "OSM",
+   "display_name": "py3_school_paths",
    "language": "python",
-   "name": "osm"
+   "name": "py3_school_paths"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2509,7 +2509,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
