GeoImputer untested version

--- a/notebooks/001_geo_imput_proto.ipynb
+++ b/notebooks/001_geo_imput_proto.ipynb
@@ -189,69 +189,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "9b8c5a74-a00a-4aab-b3db-e7c0ae2b486c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from typing import List\n",
-    "\n",
-    "import numpy as np\n",
-    "import geopandas as gpd\n",
-    "\n",
-    "from sklearn.neighbors import BallTree\n",
-    "from sklearn.metrics import pairwise\n",
-    "\n",
-    "\n",
-    "class GeoImputer:\n",
-    "\n",
-    "    geodf = None\n",
-    "    tree = None\n",
-    "\n",
-    "    def __init__(self, geodf: gpd.GeoDataFrame) -> None:\n",
-    "        if type(geodf) is gpd.GeoDataFrame:\n",
-    "            geodf.reset_index(inplace=True, drop=True)\n",
-    "            self.geodf = geodf\n",
-    "            self.tree = self.build_tree()\n",
-    "        else:\n",
-    "            raise TypeError(\"Must provide a valid GeoDataFrame object\")\n",
-    "\n",
-    "    def build_tree(self, distance_metric: str = \"haversine\") -> BallTree:\n",
-    "        self.validate_distance_metric(distance_metric)\n",
-    "        coords = self.get_geocoordinates()\n",
-    "        tree = BallTree(coords, metric=distance_metric)\n",
-    "        return tree\n",
-    "\n",
-    "    def get_geocoordinates(self, representative_point=True) -> np.ndarray:\n",
-    "        points = (\n",
-    "            self.geodf.representative_point()\n",
-    "            if representative_point\n",
-    "            else self.geodf.centroid\n",
-    "        )\n",
-    "        positions = np.transpose(np.array([points.x, points.y]))\n",
-    "        return positions\n",
-    "\n",
-    "    def column_exists(self, column_name: str) -> bool:\n",
-    "        return column_name in self.geodf.columns\n",
-    "\n",
-    "    def validate_dependencies(self) -> None:\n",
-    "        if pairwise.distance_metrics is None:\n",
-    "            raise Warning(\n",
-    "                \"There is no valid distance metrics available on the current scikit-learn installation.\"\n",
-    "            )\n",
-    "\n",
-    "    def get_valid_distance_metrics(self) -> List[str]:\n",
-    "        return pairwise.distance_metrics()\n",
-    "\n",
-    "    def validate_distance_metric(self, distance_metric: str) -> None:\n",
-    "        if distance_metric not in pairwise.distance_metrics():\n",
-    "            raise Warning(\n",
-    "                f\"{distance_metric} is not a valid distance metric. Please use one of the following: {self.get_valid_distance_metrics}\"\n",
-    "            )\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 25,
    "id": "d2a5cbed-9c8d-4b44-8035-b05cdc0a46d3",
    "metadata": {},
@@ -372,6 +309,171 @@
    ],
    "source": [
     "imputer.geodf.loc[indexes[0], 'geometry'].contains(Point(pos[0])).values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "16663245-ff80-488f-8db3-ac2df1ea842c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vals = np.array([\n",
+    "    [15, 8, 20],\n",
+    "    [25, 9, 7],\n",
+    "    [42, 36, 84]\n",
+    "])\n",
+    "\n",
+    "containing = np.array([\n",
+    "    [False, False, False],\n",
+    "    [False, True, True],\n",
+    "    [False, False, True]\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "96eedb07-40c2-49b8-899b-ad5e08c432e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "imput_index = np.where(containing.sum(axis=1) > 0, containing.argmax(axis=1), -1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "e417b4ce-ff8a-46ba-868f-8723259e135e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "imput_values = np.full(vals.shape[0], np.nan)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "11952406-42b4-4e8d-b0be-dadd9fd1c029",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i, imput_i in enumerate(imput_index):\n",
+    "    if imput_i > -1:\n",
+    "        imput_values[i] = vals[i][imput_i]\n",
+    "    else:\n",
+    "        imput_values[i] = vals[i].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "ea60e156-da27-4607-be18-9dedc8423188",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([14.33333333,  9.        , 84.        ])"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "imput_values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "674ac853-f889-4da5-8d7f-a86270f25e94",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[40.55555556, 36.        , 84.        ],\n",
+       "       [40.55555556,  9.        ,  7.        ],\n",
+       "       [40.55555556, 36.        , 84.        ]])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.where(imput_index > -1, vals[imput_index], vals[imput_index].mean())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "4586f07c-71dd-414a-b644-59dcd3244bf2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1, 0])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "containing.argmax(axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "251dc5f8-d924-472d-b20e-2ffb5bb65e7b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[False, False, False],\n",
+       "       [False,  True, False],\n",
+       "       [False,  True,  True]])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "containing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "3609044d-3efd-4979-a5f4-be5dd03a85e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[15,  8, 20],\n",
+       "       [25,  9,  7],\n",
+       "       [42, 36, 84]])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vals"
    ]
   }
  ],
